Fix whitespace issue in Schedule's sticky navigation

--- a/src/components/SchedulePage/SchedulePage.css
+++ b/src/components/SchedulePage/SchedulePage.css
@@ -1,9 +1,10 @@
 @import '../../layouts/variables.css';
 
 .Schedule-NavRow {
-  background: var(--white);
+  background: var(--js-yellow-lighter);
   padding-bottom: var(--spacer-sm);
   padding-top: var(--spacer-sm);
+  margin-top: 0;
   position: sticky;
   top: 0;
 }
